2025-03-04T01:08:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13643945806 # 583
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-04
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 213 245 / 216 248
* notice: next accum: outdated-unq outdated-all / unq all: 214 246 / 216 248
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-17] / []

2025-03-02T01:12:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13610629756 # 581
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-02
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 213 245 / 215 247
* notice: next accum: outdated-unq outdated-all / unq all: 213 245 / 216 248
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-03-01]

2025-02-19T01:06:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13403263109 # 570
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-19
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 213 245 / 214 246
* notice: next accum: outdated-unq outdated-all / unq all: 213 245 / 215 247
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-18]

2025-02-18T01:05:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13381146444 # 569