@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-04T01:08:59Z",
-  "count_outdated" : 246,
-  "uniques_outdated" : 214,
+  "timestamp" : "2025-03-05T01:09:01Z",
+  "count_outdated" : 247,
+  "uniques_outdated" : 215,
   "count" : 248,
   "uniques" : 216,
   "clones" : [
-    {
-      "timestamp": "2025-02-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-01T00:00:00Z",
       "count": 1,
